--- a/app/views/page.ejs
+++ b/app/views/page.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Cleo Manicure</title>
         <meta charset="utf-8">
@@ -70,7 +71,7 @@
             <div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Venha marcar Seu Horario!</h3>
-                    <p>Para marcar um horario é muito facio, é so mandar mensagem no Whatsapp (67) 99294-3882. <a href=" https://api.whatsapp.com/send?phone=5567992943882&text=Ola me chamo ****, encontrei seu numero na internet e gostaria de marcar um horario">Para agilizar clique aqui</a></p>
+                    <p>Para marcar um horario é muito facil, é so mandar mensagem no Whatsapp (67) 99294-3882. <a href=" https://api.whatsapp.com/send?phone=5567992943882&text=Ola me chamo ****, encontrei seu numero na internet e gostaria de marcar um horario">Para agilizar clique aqui</a></p>
                 </div>
             </div>
         </div>
